Bug 157158 - [UI] Comment arrow drop down is white/light grey when in dark mode
Summary: [UI] Comment arrow drop down is white/light grey when in dark mode
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0 target:24.2.2 target:7.6.6
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Writer-Comments Dark-Mode
  Show dependency treegraph
 
Reported: 2023-09-08 19:15 UTC by Faisal
Modified: 2025-10-14 10:16 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot showing light grey drop-down arrow on a yellow comment (7.33 KB, image/png)
2023-09-08 19:16 UTC, Faisal
Details
Screenshot 2024-02-23 verified (28.61 KB, image/png)
2024-02-23 11:55 UTC, steve
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Faisal 2023-09-08 19:15:11 UTC
Description:
The arrow for the comment menu drop-down is white/light grey when in dark mode. When the comment is yellow in color, the contrast is too low.

Steps to Reproduce:
1. Make a comment in a Writer document.
2. Observe arrow color.

Actual Results:
The arrow is #fcfcfc.

Expected Results:
The arrow should be the default (#000000?) because the color of a comment is not darkened when dark mode is used.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.0.3 (X86_64) / LibreOffice Community
Build ID: 60(Build:3)
CPU threads: 4; OS: Linux 6.1; UI render: default; VCL: kf5 (cairo+wayland)
Locale: en-GB (en_US.UTF-8); UI: en-US
7.6.0-1
Calc: threaded
Comment 1 Faisal 2023-09-08 19:16:44 UTC
Created attachment 189440 [details]
Screenshot showing light grey drop-down arrow on a yellow comment

Add screenshot
Comment 2 m_a_riosv 2023-09-08 22:51:30 UTC
Reproducible
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: beaea2e992912b4747d790070b26371f557b1f57
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded Jumbo

seems regression form
Version: 7.5.7.0.0+ (X86_64) / LibreOffice Community
Build ID: b00ebfb4f0803ef276f452e17d9e99f2229ef32f
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded
Comment 3 Kira Tubo 2023-09-16 05:32:27 UTC
Reproducible in 7.5.5.2

Version: 7.5.5.2 (X86_64) / LibreOffice Community
Build ID: ca8fe7424262805f223b9a2334bc7181abbcbf5e
CPU threads: 6; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 4 stragu 2023-09-22 16:32:18 UTC
Bibisected with linux-64-7.2 to first bad commit 64bb6290805110805ac8c464f9272226504e3fde which points to core commit:

commit 69c546e1e7a697217f273baa7c1729ff823efd76
author	Caolán McNamara 	Fri Dec 04 16:30:31 2020 +0000
committer	Caolán McNamara 	Sat Feb 06 12:16:04 2021 +0100
weld annotation window
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/107264

Caolán, can you please have a look?
Comment 5 Commit Notification 2024-02-22 14:38:49 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/48d400ef4970582fb4c401c63e7afec1b198d6ff

tdf#157158: always paint the arrow black

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 steve 2024-02-23 11:55:11 UTC
Created attachment 192726 [details]
Screenshot 2024-02-23 verified

Looking much better. Thanks Xisco.

Not sure why there is a white frame around the dropdown button. Any thoughts on that? Do we need a follow-up bug?

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 3b73071f7a7fcf80547da81e5effe4ed6018bbb4
CPU threads: 8; OS: macOS 13.6.4; UI render: default; VCL: osx
Locale: en-US (en_DE.UTF-8); UI: en-US
Calc: threaded
Comment 7 steve 2024-02-23 12:33:58 UTC
Follow-up bug about white border: https://bugs.documentfoundation.org/show_bug.cgi?id=159855
Comment 8 Commit Notification 2024-03-01 11:00:07 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/e5e6de02c36f9efb8b078512d72ac9229fe02e86

tdf#157158: always paint the arrow black

It will be available in 24.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2024-03-01 11:01:14 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/ffcdd3a72bcacce6c16dec9adc88556fcb83894f

tdf#157158: always paint the arrow black

It will be available in 7.6.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Among Us Free 2025-08-06 04:08:32 UTC
(In reply to Commit Notification from comment #9)
> Xisco Fauli committed a patch related to this issue.
> It has been pushed to "libreoffice-7-6":
> 
> https://git.libreoffice.org/core/commit/ https://amongusfree.io
> ffcdd3a72bcacce6c16dec9adc88556fcb83894f
> 
> tdf#157158: always paint the arrow black
> 
> It will be available in 7.6.6.
> 
> The patch should be included in the daily builds available at
> https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
> information about daily builds can be found at:
> https://wiki.documentfoundation.org/Testing_Daily_Builds
> 
> Affected users are encouraged to test the fix and report feedback.

I checked the fix again, thanks for the info