tdf#157158: always paint the arrow black

The background doesn't change so do not change the arrow color either

Change-Id: I7a5f80e639570e94975b7e033619783d24c95a6f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163737
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit c4553ae6e06ce84c2f477ec85bc2056645eb4833)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163756